--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <script src="index.js"></script>
   </head>
   <body>
+    <header>
+      <h1>Salary Calculator</h1>
+    </header>
 
+    <main>
+      <form id="form">
+        <input id="form-first-name" type="text" placeholder="First name" autofocus>
+        <input id="form-last-name" type="text" placeholder="Last name">
+        <input id="form-id" type="number" placeholder="ID">
+        <input id="form-title" type="text" placeholder="Title">
+        <input id="form-annual-salary" type="number" placeholder="Annual salary">
+        <button id="form-submit-btn" type="submit">Submit</button>
+      </form>
+
+      <table id="data"></table>
+    </main>
   </body>
 </html>
