Partially validate form input

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <form id="form">
         <input id="form-first-name" type="text" placeholder="First name" autofocus>
         <input id="form-last-name" type="text" placeholder="Last name">
-        <input id="form-id" type="number" placeholder="ID">
+        <input id="form-id" type="text" inputmode="numeric" placeholder="ID">
         <input id="form-title" type="text" placeholder="Title">
-        <input id="form-annual-salary" type="number" placeholder="Annual salary">
+        <input id="form-annual-salary" type="text" inputmode="numeric" placeholder="Annual salary">
         <button id="form-submit-btn" type="submit">Submit</button>
       </form>
 
