--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salary Calculator</title>
+    <link rel="stylesheet" href="main.css">
     <script src="jquery-3.6.4.min.js"></script>
     <script src="index.js"></script>
   </head>
@@ -25,5 +26,9 @@
 
       <table id="data"></table>
     </main>
+
+    <footer>
+      <p>Hi</p>
+    </footer>
   </body>
 </html>
