--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
         <button id="form-submit-btn" type="submit">Submit</button>
       </form>
 
-      <table id="data"></table>
+      <table id="data">
+        <thead>
+          <tr>
+            <td>First name</td>
+            <td>Last name</td>
+            <td>ID</td>
+            <td>Title</td>
+            <td>Salary</td>
+          </tr>
+        </thead>
+      </table>
     </main>
 
     <footer>
