--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
           </tr>
         </thead>
       </table>
+
+      <p>Total monthly: <span id="total-monthly">$0</span></p>
     </main>
 
     <footer>
