Add input placeholders

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button class="field" type="button">
           <label for="id">ID</label>
           <div class="vertical-separator"></div>
-          <input id="form-id" name="id" inputmode="numeric" size="1">
+          <input id="form-id" name="id" placeholder="#" inputmode="numeric" size="1">
         </button>
         <button class="field" type="button">
           <label for="title">Title</label>
@@ -40,7 +40,7 @@
         <button class="field" type="button">
           <label for="annual-salary">Annual salary</label>
           <div class="vertical-separator"></div>
-          <input id="form-annual-salary" name="annual-salary" inputmode="numeric" size="1">
+          <input id="form-annual-salary" name="annual-salary" placeholder="$__,___" inputmode="numeric" size="7">
         </button>
         <button id="form-submit-btn" type="submit">Submit</button>
       </form>
