Change misleading annual salary placeholder

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <button class="field" type="button">
               <label for="annual-salary">Annual salary</label>
               <div class="vertical-separator"></div>
-              <input id="form-annual-salary" name="annual-salary" placeholder="$__,___" inputmode="numeric" size="7">
+              <input id="form-annual-salary" name="annual-salary" placeholder="$" inputmode="numeric" size="7">
             </button>
           </div>
         </div>
