--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salary Calculator</title>
     <link rel="stylesheet" href="main.css">
-    <script src="jquery-3.6.4.min.js"></script>
-    <script src="index.js"></script>
+    <!-- <script src="jquery-3.6.4.min.js"></script> -->
+    <script src="no-jquery.js"></script>
   </head>
   <body>
     <header>
@@ -64,7 +64,7 @@
         </thead>
       </table>
 
-      <p>Total monthly: <span id="total-monthly">$0</span></p>
+      <p>Total monthly: <span id="total-monthly">0</span></p>
     </main>
   </body>
 </html>
