Add monthly total background color requirement

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </thead>
       </table>
 
-      <p>Total monthly: <span id="total-monthly">0</span></p>
+      <p>Total monthly: <span id="total-monthly">$0</span></p>
     </main>
   </body>
 </html>
